# katha-base

./: .env.example  .gitignore  MIGRATION.md  README.md  pyproject.toml  world.yaml
.claude/: claude.md  settings.json
.claude/commands/: add-personality-traits.md  back.md  commit.md  forward.md  generate-story.md  inconsistencies.md  story-feedback.md  summarize-story.md
characters/: arthur.yaml  cu-cullan.yaml  cullan.yaml  dorje_legpa.yaml  el-elise.yaml  em-emer.yaml  emer.yaml  ha-hansel.yaml  hansel.yaml  henry.yaml  james.yaml  no-noah.yaml  regan.yaml
content/: overview.md
content/characters/: arthur.yaml  cullan.yaml  emer.yaml  hansel.yaml  henry.yaml  james.yaml
content/locations/: dining_room.yaml  exterior.yaml  kitchen.yaml  library.yaml  (+2 more)
docs/: image-generation.md
locations/: dining_room.yaml  driveway.yaml  exterior.yaml  hallway.yaml  kitchen.yaml  library.yaml  living_room.yaml  play_room.yaml  playroom.yaml  stairs.yaml  sun_room.yaml
pages/: el-01.yaml  el-02.yaml  el-03.yaml  el-05.yaml  el-06.yaml  el-08.yaml  el-10.yaml  el-11.yaml  el-12.yaml  el-no-04.yaml  el-no-07.yaml  el-no-09.yaml
ref-images/: README.md
scripts/: __init__.py  add_references.py  analyze_styles.py  check_inconsistencies.py  gen_book.py  gen_image.py  list_versions.py  merge_app.py  print_text.py  show_story.py  validate_structure.py  versioning.py
story/: overview.md  page-template.yaml  styles-skip.yaml  styles.yaml  template.yaml
templates/: character-example.yaml  page-example.yaml  page-template.yaml  story-template.yaml  world-example.yaml
(+2 files in other folders)
