[project]
name = "katha-base"
version = "0.1.0"
description = "Modular storybook system for creating interconnected children's stories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "replicate>=0.25.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.4.0",
    "google-generativeai>=0.8.5",
    "google-genai>=1.0.0",
    "streamlit>=1.51.0",
    "pypdf>=6.4.0",
    "reportlab>=4.4.5",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
